variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: identifier expected but '=' found.
var nbPas: = 0
           ^Variables:2: error: identifier expected but '=' found.
var dejaFait: = 0
              ^